1699: CommitCommentsWorkItem does excessive unnecessary work
Reviewed-by: zsong, ihse