@@ -22,6 +22,8 @@
  */
 package org.openjdk.skara.forge.gitlab;
 
+import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.util.logging.Logger;
 import org.openjdk.skara.forge.*;
 import org.openjdk.skara.host.HostUser;
@@ -500,12 +502,21 @@ public class GitLabRepository implements HostedRepository {
         throw new RuntimeException("Did not find commit with title " + commitTitle + " for repository " + projectName);
     }
 
+    /**
+     * The localRepo is needed to build a map of commit title to commit hash mappings,
+     * which in turn is needed to identify commits form the GitLab notes objects. The
+     * notes only has the commit titles, not the hashes.
+     */
     @Override
-    public List<CommitComment> recentCommitComments(Map<String, Set<Hash>> commitTitleToCommits, Set<Integer> excludeAuthors) {
-        var fourDaysAgo = ZonedDateTime.now().minusDays(4);
+    public List<CommitComment> recentCommitComments(ReadOnlyRepository localRepo, Set<Integer> excludeAuthors,
+            List<Branch> branches, ZonedDateTime updatedAfter) {
+        if (localRepo == null) {
+            throw new NullPointerException("localRepo cannot be null in GitLabMergeRequest");
+        }
+
         var formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
         var notes = request.get("events")
-                      .param("after", fourDaysAgo.format(formatter))
+                      .param("after", updatedAfter.format(formatter))
                       .execute()
                       .stream()
                       .filter(o -> o.contains("note") &&
@@ -517,22 +528,13 @@ public class GitLabRepository implements HostedRepository {
                       .filter(o -> o.contains("author") &&
                                    o.get("author").contains("id") &&
                                    !excludeAuthors.contains(o.get("author").get("id").asInt()))
-                      .collect(Collectors.toList());
+                      .toList();
 
-        // Fetch eventual new commits
-        var commits = request.get("repository/commits")
-                             .param("since", ZonedDateTime.now().minusHours(1).format(DateTimeFormatter.ISO_DATE_TIME))
-                             .execute()
-                             .asArray();
-        for (var commit : commits) {
-            var hash = new Hash(commit.get("id").asString());
-            var title = commit.get("title").asString();
-            if (commitTitleToCommits.containsKey(title)) {
-                commitTitleToCommits.get(title).add(hash);
-            } else {
-                commitTitleToCommits.put(title, Set.of(hash));
-            }
+        if (notes.isEmpty()) {
+            return List.of();
         }
+
+        var commitTitleToCommits = getCommitTitleToCommitsMap(localRepo, branches);
 
         return notes.stream()
                     .map(o -> {
@@ -546,7 +548,47 @@ public class GitLabRepository implements HostedRepository {
                                                      commitTitleToCommits);
                         return new CommitComment(hash, null, -1, String.valueOf(id), body, user, createdAt, createdAt);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
+    }
+
+    /**
+     * Lazy fetching and caching of the commitTitleToCommits map. The first time
+     * this is called, the full map is built from the local repository. After that
+     * it's just refreshed from the server.
+     */
+    private final Map<String, Set<Hash>> commitTitleToCommits = new HashMap<>();
+    private boolean commitTitleToCommitsInitialized = false;
+    private ZonedDateTime lastCommitTime = ZonedDateTime.ofInstant(Instant.EPOCH, ZoneId.systemDefault());
+    private Map<String, Set<Hash>> getCommitTitleToCommitsMap(ReadOnlyRepository localRepo, List<Branch> branches) {
+        if (!commitTitleToCommitsInitialized) {
+            try {
+                for (var commit : localRepo.commitMetadataFor(branches)) {
+                    var title = commit.message().stream().findFirst().orElse("");
+                    commitTitleToCommits.computeIfAbsent(title, t -> new LinkedHashSet<>()).add(commit.hash());
+                    if (lastCommitTime.isBefore(commit.authored())) {
+                        lastCommitTime = commit.authored();
+                    }
+                }
+            } catch (IOException e) {
+                throw new UncheckedIOException(e);
+            }
+            commitTitleToCommitsInitialized = true;
+        }
+        // Fetch eventual new commits
+        var commits = request.get("repository/commits")
+                .param("since", lastCommitTime.format(DateTimeFormatter.ISO_DATE_TIME))
+                .execute()
+                .asArray();
+        for (var commit : commits) {
+            var hash = new Hash(commit.get("id").asString());
+            var title = commit.get("title").asString();
+            commitTitleToCommits.computeIfAbsent(title, t -> new LinkedHashSet<>()).add(hash);
+            var authored = ZonedDateTime.parse(commit.get("authored_date").asString());
+            if (lastCommitTime.isBefore(authored)) {
+                lastCommitTime = authored;
+            }
+        }
+        return commitTitleToCommits;
     }
 
     @Override
